# textbelt-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: lint.yml  release.yml  test.yml
src/textbelt_py/: __init__.py  client.py  decorators.py  exceptions.py  models.py
tests/: .env.test  client_test.py  decorator_test.py  integration_test.py
