[project]
name = "textbelt-py"
version = "0.1.4"
description = "A Python client for Textbelt SMS API"
authors = [
    {name = "Wahhaj Farooq",email = "wahhaj.farooq@pm.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]
keywords = [ "sms", "textbelt", "api" ]

[project.urls]
homepage = "https://github.com/wfar/textbelt-py"
repository = "https://github.com/wfar/textbelt-py"
documentation = "https://github.com/wfar/textbelt-py/blob/main/README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-dotenv = "^0.5.2"
pytest-cov = "^6.1.1"
responses = "^0.25.7"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
env_files = "tests/.env.test"

[tool.ruff]
line-length = 100
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E", "F", "I"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
